# rt-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
art/: scene1  scene1_depth  scene2  scene2_depth
include/: Macros.h
include/Beam/: Hit.h  Ray.h
include/Camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
include/Geometry/: Cylinder.h  Group.h  Object3D.h  Plane.h  Sphere.h  Transform.h  Triangle.h
include/Libs/: json.h
include/Material/: Material.h  PhongMaterial.h
include/Math/: Matrix3.h  Matrix4.h  Random.h  Vector3.h  Vector4.h
include/Renderer/: DirectionalLight.h  Image.h  Light.h  Renderer.h
include/Utilities/: Timer.h
res/: scene1_diffuse.json  scene1_exponent_variations.json  scene3_colored_lights.json  scene3_perspective.json  scene4_reflective_sphere.json  scene5_transparent_sphere.json  scene6_transparent_sphere2.json  scene7_cylinder.json  scene7_squashed_rotated_sphere.json  scene8_balls.json
src/: main.cpp
src/Beam/: Hit.cpp  Ray.cpp
src/Camera/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/Geometry/: Cylinder.cpp  Group.cpp  Object3D.cpp  Plane.cpp  Sphere.cpp  Transform.cpp  Triangle.cpp
src/Material/: Material.cpp  PhongMaterial.cpp
src/Math/: Matrix3.cpp  Matrix4.cpp  Matrix4Tests.cpp  Vector3.cpp  Vector4.cpp  Vector4Tests.cpp
src/Renderer/: DirectionalLight.cpp  Image.cpp  Light.cpp  Renderer.cpp
src/Utilities/: Timer.cpp
